// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`protect should protect player 1`] = `
"*magni* пытался атаковать *quisquam*, но у него не получилось
_Защита_ *quisquam*: 📖72"
`;

exports[`protect should not get exp if protect enemy 1`] = `
"*magni* пытался атаковать *quisquam*, но у него не получилось
_Защита_ *quisquam*: 📖48,*magni*: 📖0"
`;
